<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_movie_pic"
        android:layout_width="346dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/img_myMoviePic"
        app:srcCompat="@drawable/movies_logo" />

    <TextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_alignStart="@+id/img_movie_pic"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="110dp"
        android:text="@string/tv_createNewAccount"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_enterUsername"
        android:layout_width="174dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/img_movie_pic"
        android:layout_alignParentTop="true"
        android:layout_marginTop="182dp"
        android:text="@string/tv_enterUsername" />

    <TextView
        android:id="@+id/tv_enterPassword"
        android:layout_width="174dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/img_movie_pic"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="187dp"
        android:text="@string/tv_enterPassword" />

    <EditText
        android:id="@+id/pt_new_username"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enterUsername"
        android:layout_alignStart="@+id/img_movie_pic"
        android:ems="10"
        android:hint="@string/pt_new_username"
        android:inputType="textPersonName"
        android:text="@string/pt_new_username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pt_new_password"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enterPassword"
        android:layout_alignStart="@+id/tv_enterPassword"
        android:layout_marginTop="-187dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pt_new_password"
        android:inputType="textPersonName|textPassword"
        android:text="@string/pt_new_password" />

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_createAccount" />
</RelativeLayout>