<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_movieTitle"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/img_default"
        android:layout_width="97dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/img_default"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_movieTitle"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="175dp"
        android:text="@string/tv_genre"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_displayGenre"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img_default"
        android:layout_alignTop="@+id/tv_genre"
        android:layout_marginStart="-54dp"
        android:layout_marginTop="2dp"
        android:text="@string/tv_displayGenre"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="225dp"
        android:text="@string/tv_actors"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_displayActors"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_actors"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/tv_actors"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_displayReleased"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-56dp"
        android:text="@string/tv_released"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_displayReleased"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_actors"
        android:layout_alignParentStart="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="76dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_directors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_genre"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="160dp"
        android:text="@string/tv_directors"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_displayDirectors"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_released"
        android:layout_alignStart="@+id/tv_displayReleased"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-24dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_producers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_genre"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="100dp"
        android:text="@string/tv_producers"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_displayProducers"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_producers"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/tv_actors"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/Buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popup_deletetask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"
            android:text="@string/popup_deletetask" />

        <Button
            android:id="@+id/popup_edittask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:text="@string/popup_edittask" />

        <Button
            android:id="@+id/popup_donetask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/popup_savetask" />
    </LinearLayout>
</RelativeLayout>